--- a/email-order-success-2.html
+++ b/email-order-success-2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="light" data-footer="dark">
+<html >
 
     <head>
 
@@ -9,7 +9,7 @@
         <meta content="Recruitment world" name="description">
         <meta content="Nami" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/fav.svg">
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -22,7 +22,7 @@
             <div style="max-width: 650px;margin:auto; box-shadow: rgba(135, 138, 153, 0.10) 0 5px 20px -6px;border-radius: 6px;border: 1px solid #eef1f5;overflow: hidden;background-color: #fff;">
                 <div style="padding: 1.5rem; display: flex;gap: 8px; align-items: center; justify-content: space-between;flex-wrap: wrap;">
                     <div>
-                        <a href="index.html"><img src="assets/images/logo-dark.png" alt="" height="24"></a>
+                        <a href="index.html"><img src="assets/images/logoV.svg" alt="" height="24"></a>
                     </div>
                     <div style="display: flex;gap: 6px;">
                         <p style="margin-bottom: 0px; font-size: 14px;font-weight: 500;margin-top: 0px;"><span style="color: #878a99 !important;">Order ID:</span> HY45120010</p>
@@ -152,7 +152,7 @@
             <div style="max-width: 650px;margin:auto; box-shadow: rgba(135, 138, 153, 0.10) 0 5px 20px -6px;border-radius: 6px;overflow: hidden;background-color: #06283D;">
                 <div style="padding: 1.5rem; display: flex;gap: 8px; align-items: center; justify-content: space-between;flex-wrap: wrap;">
                     <div>
-                        <a href="index.html"><img src="assets/images/logo-light.png" alt="" height="24"></a>
+                        <a href="index.html"><img src="assets/images/logoV-light.svg" alt="" height="24"></a>
                     </div>
                     <div style="display: flex;gap: 6px;">
                         <p style="margin-bottom: 0px; font-size: 14px;font-weight: 500;margin-top: 0px;"><span style="color: #878a99 !important;">Order ID:</span> HY45120010</p>
