--- a/auth-500.html
+++ b/auth-500.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="light" data-footer="dark">
+<html >
 
     <head>
 
@@ -9,7 +9,7 @@
         <meta content="Recruitment world" name="description">
         <meta content="Nami" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/fav.svg">
 
         <!-- Bootstrap Css -->
         <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
@@ -31,7 +31,7 @@
                 <div class="container-fluid">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-2">
-                            <a href="index.html"><img src="assets/images/logo-dark.png" alt="" height="24" /></a>
+                            <a href="index.html"><img src="assets/images/logoV.svg" alt="" height="24" /></a>
                         </div><!---end col-->
                         <div class="col-auto">
                             <ul class="list-unstyled hstack gap-2 mb-0">
