--- a/auth-signup-basic.html
+++ b/auth-signup-basic.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="light" data-footer="dark">
+<html >
 
     <head>
 
@@ -9,7 +9,7 @@
         <meta content="Recruitment world" name="description">
         <meta content="Nami" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/fav.svg">
 
         <!-- Bootstrap Css -->
         <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
@@ -32,8 +32,8 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-2">
                             <a class="navbar-brand mb-2 mb-sm-0" href="index.html">
-                                <img src="assets/images/logo-dark.png" class="card-logo card-logo-dark" alt="logo dark" height="22">
-                                <img src="assets/images/logo-light.png" class="card-logo card-logo-light" alt="logo light" height="22">
+                                <img src="assets/images/logoV.svg" class="card-logo card-logo-dark" alt="logo dark" height="22">
+                                <img src="assets/images/logoV-light.svg" class="card-logo card-logo-light" alt="logo light" height="22">
                             </a>
                         </div><!---end col-->
                         <div class="col-auto">
