--- a/email-order-success.html
+++ b/email-order-success.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="light" data-footer="dark">
+<html >
 
     <head>
 
@@ -9,7 +9,7 @@
         <meta content="Recruitment world" name="description">
         <meta content="Nami" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/fav.svg">
 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -20,7 +20,7 @@
         <section style="font-family: 'Inter', sans-serif; box-sizing: border-box; font-size: 15px; width: 100%; background-color: transparent; margin: 35px 0;color: #06283D;">
             <div style="max-width: 650px;margin:auto; box-shadow: rgba(135, 138, 153, 0.10) 0 5px 20px -6px;border-radius: 6px;border: 1px solid #eef1f5;overflow: hidden;background-color: #fff;">
                 <div style="padding: 1.5rem;background-color: #fafafa;">
-                    <a href="index.html"><img src="assets/images/logo-dark.png" alt="" height="28" style="display: block;margin: 0 auto;"></a>
+                    <a href="index.html"><img src="assets/images/logoV.svg" alt="" height="28" style="display: block;margin: 0 auto;"></a>
                 </div>
                 <div style="padding: 1.5rem;">
                     <h5 style="font-size: 18px;font-family: 'Inter', sans-serif;font-weight: 600;margin-bottom: 18px;margin-top: 0px;line-height: 1.2;">Your Order Confirmed!</h5>
@@ -164,7 +164,7 @@
             <div style="max-width: 650px;margin:auto; box-shadow: rgba(135, 138, 153, 0.10) 0 5px 20px -6px;border-radius: 6px;overflow: hidden;background-color: #06283D;">
                 <div style="padding: 1.5rem;background-color: #0f3146;">
                     <a href="index.html">
-                        <img src="assets/images/logo-light.png" alt="" height="28" style="display: block;margin: 0 auto;">
+                        <img src="assets/images/logoV-light.svg" alt="" height="28" style="display: block;margin: 0 auto;">
                     </a>
                 </div>
                 <div style="padding: 1.5rem;">
