--- a/products-category.html
+++ b/products-category.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="light" data-footer="dark">
+<html >
 
     <head>
 
@@ -9,7 +9,7 @@
         <meta content="Recruitment world" name="description">
         <meta content="Nami" name="author">
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/fav.svg">
 
         <!--Swiper slider css-->
         <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css">
@@ -105,10 +105,10 @@
             <div class="container">
                 <a class="navbar-brand d-none d-lg-block" href="index.html">
                     <div class="logo-dark">
-                        <img src="assets/images/logo-dark.png" alt="" height="25">
+                        <img src="assets/images/logoV.svg" alt="" height="25">
                     </div>
                     <div class="logo-light">
-                        <img src="assets/images/logo-light.png" alt="" height="25">
+                        <img src="assets/images/logoV-light.svg" alt="" height="25">
                     </div>
                 </a>
                 <button class="btn btn-soft-primary btn-icon d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,7 +118,7 @@
                     <ul class="navbar-nav mx-lg-auto mb-2 mb-lg-0" id="navigation-menu">
                         <li class="nav-item d-block d-lg-none">
                             <a class="d-block p-3 h-auto text-center" href="index.html">
-                                <img src="assets/images/logo-dark.png" alt="" height="25">
+                                <img src="assets/images/logoV.svg" alt="" height="25">
                             </a>
                         </li>
                         <li class="nav-item">
@@ -822,7 +822,7 @@
                                 <li class="chat-list left">
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="assets/images/logo-sm.png" alt="">
+                                            <img src="assets/images/fav.svg" alt="">
                                         </div>
                                         <div class="user-chat-content">
                                             <div class="ctext-wrap">
@@ -873,7 +873,7 @@
                                 <li class="chat-list left">
                                     <div class="conversation-list">
                                         <div class="chat-avatar">
-                                            <img src="assets/images/logo-sm.png" alt="">
+                                            <img src="assets/images/fav.svg" alt="">
                                         </div>
                                         <div class="user-chat-content">
                                             <div class="ctext-wrap">
@@ -1362,8 +1362,8 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="footer-info">
-                            <img src="assets/images/logo-light.png" alt="" height="28" class="logo-light">
-                            <img src="assets/images/logo-dark.png" alt="" height="28" class="logo-dark">
+                            <img src="assets/images/logoV-light.svg" alt="" height="28" class="logo-light">
+                            <img src="assets/images/logoV.svg" alt="" height="28" class="logo-dark">
                             <p class="footer-desc mt-4 mb-2 me-3">Recruitment world provides best fashion experience for both men and women at best pricing. We follow New fashion approach to give best premium feel.</p>
 
                             <div class="footer-social mt-4">
