--- a/index.html
+++ b/index.html
@@ -250,83 +250,29 @@
             </button>
         </div>
     </section>
-    <section class="section">
-        <div class="container">
-            <div class="row gy-4 gy-lg-0">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/fast-delivery.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Fast &amp; Secure Delivery</h5>
-                            <p class="text-muted mb-0">Tell about your service.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/returns.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">2 Days Return Policy</h5>
-                            <p class="text-muted mb-0">No question ask.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/guarantee-certificate.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Money Back Guarantee</h5>
-                            <p class="text-muted mb-0">Within 5 business days</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/24-hours-support.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">24 X 7 Service</h5>
-                            <p class="text-muted mb-0">Online service for customer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section pt-0">
+
+    <section class="section text-center recruitmentRequest">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <a href="#!"
-                        class="product-banner-1 mt-4 mt-lg-0 rounded overflow-hidden position-relative d-block">
-                        <img src="assets/images/ecommerce/features/img-3.jpg" class="img-fluid rounded" alt="">
-                        <div class="bg-overlay blue"></div>
+                <div class="col-sm-6">
+                    <a href="#!" class="productBanner">
+                        <img src="assets/images/s1.webp" alt="">
                         <div class="product-content p-4">
-                            <p class="text-uppercase text-white mb-2">Up to 50-70%</p>
-                            <h1 class="text-white lh-base fw-medium ff-secondary"> Women's Sportwere Sales</h1>
+                            <h1 class="text-white"> طلب استقدام </h1>
                             <div class="product-btn mt-4 text-white">
-                                طلب استقدام
+                                طلب
                                 <i class="bi bi-arrow-right ms-2"></i>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6">
-                    <a href="#!"
-                        class="product-banner-1 mt-4 mt-lg-0 rounded overflow-hidden position-relative d-block">
-                        <img src="assets/images/ecommerce/features/img-1.jpg" class="img-fluid rounded" alt="">
+                <div class="col-sm-6">
+                    <a href="#!" class="productBanner">
+                        <img src="assets/images/s2.webp" alt="">
                         <div class="product-content p-4">
-                            <p class="text-uppercase fw-medium text-secondary mb-2">Summer Sales</p>
-                            <h1 class="lh-base ff-secondary text-dark">Trendy Fashion Clothes</h1>
-                            <div class="product-btn mt-4">
-                                طلب استقدام
+                            <h1 class="text-white"> طلب نقل عمالة </h1>
+                            <div class="product-btn mt-4 text-white">
+                                طلب
                                 <i class="bi bi-arrow-right ms-2"></i>
                             </div>
                         </div>
