--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -921,9 +921,9 @@
                             <h1 class="text-white mb-2">Privacy Policy</h1>
                             <p class="text-white-75 mb-0">This Privacy policy was published on November 24<sup>th</sup>, 2022.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
         </section>
 
         <div class="position-relative">
@@ -1034,8 +1034,8 @@
                                     <a href="#!" class="btn btn-ghost-danger btn-hover"><i class="ri-close-line align-bottom me-1"></i> Decline</a>
                                     <a href="#!" class="btn btn-success btn-hover">Accept Now</a>
                                 </div>
-                            </div><!--end col-->
-                        </div><!--end row-->
+                            </div>
+                        </div>
                     </div>
                 </div><!--end card-->
             </div><!--end conatiner-->
@@ -1056,14 +1056,14 @@
                                 </div>
                             </form>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-4">
                         <div class="mt-4 mt-lg-0">
                             <img src="assets/images/ecommerce/subscribe.png" alt="" class="img-fluid">
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="position-relative py-5">
@@ -1079,7 +1079,7 @@
                                 <p class="text-muted mb-0">Tell about your service.</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1090,7 +1090,7 @@
                                 <p class="text-muted mb-0">No question ask.</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1101,7 +1101,7 @@
                                 <p class="text-muted mb-0">Within 5 business days</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1112,8 +1112,8 @@
                                 <p class="text-muted mb-0">Online service for customer</p>
                             </div>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
             </div><!--end conatiner-->
         </section>
 
