--- a/about-us.html
+++ b/about-us.html
@@ -1112,7 +1112,7 @@
                             <p class="text-muted mb-0">Tell about your service.</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1123,7 +1123,7 @@
                             <p class="text-muted mb-0">No question ask.</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1134,7 +1134,7 @@
                             <p class="text-muted mb-0">Within 5 business days</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1145,8 +1145,8 @@
                             <p class="text-muted mb-0">Online service for customer</p>
                         </div>
                     </div>
-                </div><!--end col-->
-            </div><!--end row-->
+                </div>
+            </div>
         </div>
     </section>
 
