--- a/auth-logout-basic.html
+++ b/auth-logout-basic.html
@@ -53,7 +53,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div><!--end row-->
+                    </div>
                 </div><!--end container-fluid-->
             </div>
             <div class="w-100">
@@ -86,9 +86,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end container-->
+                        </div>
+                    </div>
+                </div>
 
                 <footer class="footer">
                     <div class="container">
