--- a/products-category.html
+++ b/products-category.html
@@ -924,9 +924,9 @@
                             <h1 class="text-white lh-base text-capitalize">Categories</h1>
                             <p class="text-white-75 fs-15 mb-0">Our all categories wise product available here.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section">
@@ -937,8 +937,8 @@
                             <h2 class="mb-3">Classic</h2>
                             <p class="text-muted fs-15 mb-0">Browser the collection of top categories.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
 
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6">
@@ -952,7 +952,7 @@
                                 </div>
                             </div>
                         </div><!--end card-->
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="card card-animate text-center">
                             <div class="card-body p-4">
@@ -964,7 +964,7 @@
                                 </div>
                             </div>
                         </div><!--end card-->
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="card card-animate text-center">
                             <div class="card-body p-4">
@@ -976,7 +976,7 @@
                                 </div>
                             </div>
                         </div><!--end card-->
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="card card-animate text-center">
                             <div class="card-body p-4">
@@ -988,9 +988,9 @@
                                 </div>
                             </div>
                         </div><!--end card-->
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section pt-0">
@@ -1001,9 +1001,9 @@
                             <h2 class="mb-3">Default</h2>
                             <p class="text-muted fs-15 mb-0">Browser the collection of top categories.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
             <div class="container-fluid">
                 <div class="row gy-4">
                     <div class="col-xxl-4 col-md-6">
@@ -1018,7 +1018,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-xxl-4 col-md-6">
                         <a href="product-list-defualt.html" class="product-banner-1 mt-4 mt-lg-0 rounded overflow-hidden position-relative d-block right">
                             <img src="assets/images/ecommerce/features/img-2.jpg" class="img-fluid rounded" alt="">
@@ -1031,7 +1031,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-xxl-4 col-md-6">
                         <a href="product-grid-defualt.html" class="product-banner-1 mt-4 mt-lg-0 rounded overflow-hidden position-relative d-block">
                             <img src="assets/images/ecommerce/features/img-1.jpg" class="img-fluid rounded" alt="">
@@ -1043,8 +1043,8 @@
                                 </div>
                             </div>
                         </a>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
             </div><!--end container-fluid-->
         </section>
 
@@ -1056,8 +1056,8 @@
                             <h3 class="mb-3">Ellips</h3>
                             <p class="text-muted fs-14 mb-0">Browser the collection of top categories.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
@@ -1069,7 +1069,7 @@
                                 <p class="text-muted fs-12">96 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
                             <img src="assets/images/products/img-20.png" alt="" class="img-fluid rounded-circle bg-dark-subtle border border-2 border-dark border-opacity-10 p-4">
@@ -1080,7 +1080,7 @@
                                 <p class="text-muted fs-12">25 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
                             <img src="assets/images/products/img-18.png" alt="" class="img-fluid rounded-circle bg-warning-subtle border border-2 border-warning border-opacity-10 p-4">
@@ -1091,7 +1091,7 @@
                                 <p class="text-muted fs-12">10 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
                             <img src="assets/images/products/img-1.png" alt="" class="img-fluid rounded-circle bg-danger-subtle border border-2 border-danger border-opacity-10 p-4">
@@ -1102,7 +1102,7 @@
                                 <p class="text-muted fs-12">58 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
                             <img src="assets/images/products/img-15.png" alt="" class="img-fluid rounded-circle bg-info-subtle border border-2 border-info border-opacity-10 p-4">
@@ -1113,7 +1113,7 @@
                                 <p class="text-muted fs-12">64 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="text-center">
                             <img src="assets/images/products/img-5.png" alt="" class="img-fluid rounded-circle bg-danger-subtle border border-2 border-danger border-opacity-10 p-4">
@@ -1124,8 +1124,8 @@
                                 <p class="text-muted fs-12">342 Products</p>
                             </div>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
             </div><!--end conatiner-->
         </section>
 
@@ -1137,11 +1137,11 @@
                             <h3 class="mb-3">Slider Products</h3>
                             <p class="text-muted fs-14 mb-0">Browser the collection of top categories.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="swiper mySwiper" dir="ltr">
+                        <div class="swiper mySwiper">
                             <div class="swiper-wrapper py-4">
                                 <div class="swiper-slide">
                                     <div class="card card-animate overflow-hidden">
@@ -1231,8 +1231,8 @@
                             <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
             </div><!--end conatiner-->
         </section>
         
@@ -1244,8 +1244,8 @@
                             <h2 class="mb-3">Masonry</h2>
                             <p class="text-muted fs-15 mb-0">Browser the collection of top categories.</p>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    </div>
+                </div>
                 <div class="row g-2">
                     <div class="col-lg-7">
                         <div class="card card-height-100">
@@ -1256,7 +1256,7 @@
                                 <img src="assets/images/ecommerce/instagram/img-1.jpg" class="img-fluid" alt="">
                             </a>
                         </div><!--end card-->
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-5">
                         <div class="row g-2">
                             <div class="col-lg-12">
@@ -1318,7 +1318,7 @@
                                 <p class="text-muted mb-0">Tell about your service.</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1329,7 +1329,7 @@
                                 <p class="text-muted mb-0">No question ask.</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1340,7 +1340,7 @@
                                 <p class="text-muted mb-0">Within 5 business days</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="d-flex align-items-center gap-3">
                             <div class="flex-shrink-0">
@@ -1351,9 +1351,9 @@
                                 <p class="text-muted mb-0">Online service for customer</p>
                             </div>
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
