--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1113,7 +1113,7 @@
                             <p class="text-muted mb-0">Tell about your service.</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1124,7 +1124,7 @@
                             <p class="text-muted mb-0">No question ask.</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1135,7 +1135,7 @@
                             <p class="text-muted mb-0">Within 5 business days</p>
                         </div>
                     </div>
-                </div><!--end col-->
+                </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="d-flex align-items-center gap-3">
                         <div class="flex-shrink-0">
@@ -1146,9 +1146,9 @@
                             <p class="text-muted mb-0">Online service for customer</p>
                         </div>
                     </div>
-                </div><!--end col-->
-            </div><!--end row-->
-        </div><!--end container-->
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="section footer-landing pb-0">
