--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="d-sm-flex align-items-center">
+                    <div class="d-flex flex-column gap-3 flex-md-row align-items-center ">
                         <h2 class="text-white text-capitalize mb-0 flex-grow-1"> كيف يمكننا مساعدتك </h2>
                         <div class="flex-shrink-0 mt-3 mt-sm-0">
                             <a href="contact-us.html" class="btn btn-darken-secondary btn-hover"><i
@@ -1127,8 +1127,8 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <div class="row pl-0 pl-lg-3">
-                        <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-4 col-6">
                             <div class="mt-lg-0 mt-4">
                                 <h5 class="footer-title"> روابط سريعة </h5>
                                 <ul class="list-unstyled footer-link mt-3">
@@ -1139,7 +1139,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-6">
                             <div class="mt-lg-0 mt-4">
                                 <h5 class="footer-title">الدعم</h5>
                                 <ul class="list-unstyled footer-link mt-3">
@@ -1152,7 +1152,7 @@
                         <div class="col-md-4">
                             <div class="mt-lg-0 mt-4">
                                 <h5 class="footer-title"> حسابي </h5>
-                                <ul class="list-unstyled footer-link mt-3">
+                                <ul class="list-unstyled footer-link mt-3 d-flex gap-3 d-md-block">
                                     <li><a href="#!"> تسجيل الدخول </a></li>
                                     <li><a href="#!"> انشاء حساب </a></li>
                                     <li><a href="#!"> طلبات الاستقدام </a></li>
