--- a/auth-twostep.html
+++ b/auth-twostep.html
@@ -2,92 +2,56 @@
 <html>
 
 <head>
-
     <meta charset="utf-8">
-    <title>Two Step Verification | Recruitment world Recruitment world</title>
+    <title>Recruitment world</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Recruitment world" name="description">
     <meta content="Nami" name="author">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
-
+    <!--Swiper slider css-->
+    <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
+    <!--font Awesome -->
+    <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
+    <!-- Icons Css -->
+    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap Css -->
     <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
-    <!-- Icons Css -->
-    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
     <!-- custom Css-->
     <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
-
     <section
         class="auth-page-wrapper position-relative bg-light min-vh-100 d-flex align-items-center justify-content-between">
-        <div class="auth-header position-fixed top-0 start-0 end-0 bg-body">
-            <div class="container-fluid">
-                <div class="row justify-content-between align-items-center">
-                    <div class="col-2">
-                        <a class="navbar-brand mb-2 mb-sm-0" href="index.html">
-                            <img src="assets/images/logoV.svg" class="card-logo card-logo-dark" alt="logo dark"
-                                height="22">
-                            <img src="assets/images/logoV-light.svg" class="card-logo card-logo-light" alt="logo light"
-                                height="22">
-                        </a>
-                    </div><!---end col-->
-                    <div class="col-auto">
-                        <ul class="list-unstyled hstack gap-2 mb-0">
-                            <li class="me-md-3">
-                                <a href="#!" class="text-body fw-medium fs-15">Become a Selling</a>
-                            </li>
-                            <li class="d-none d-md-block">
-                                <a href="#!" class="btn btn-soft-secondary" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <i class="bi bi-google-play align-middle me-1"></i> Download App
-                                </a>
-                            </li>
-                            <li class="d-none d-md-block">
-                                <a href="#!" class="btn btn-soft-primary" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <i class="bi bi-apple align-middle me-1"></i> Download App
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div><!--end container-fluid-->
-        </div>
         <div class="w-100">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center align-items-center flex-column">
+                    <div class="col-lg-6">
+                        <img src="assets/images/logo.svg" class="authLogo" alt="">
+                    </div>
                     <div class="col-lg-6">
                         <div class="auth-card mx-lg-3">
                             <div class="card border-0 mb-0">
                                 <div class="card-header bg-primary border-0">
-                                    <div class="row">
-                                        <div class="col-lg-4 col-3">
-                                            <img src="assets/images/auth/img-1.png" alt="" class="img-fluid">
-                                        </div>
-                                        <div class="col-lg-8 col-9">
-                                            <h1 class="text-white lh-base fw-lighter">Verify Your Email</h1>
-                                        </div>
-                                    </div>
+                                    <h4 class="text-white lh-base fw-bold text-center py-3 mb-0"> تحقق من بريدك
+                                        الإلكتروني </h4>
                                 </div>
                                 <div class="card-body text-center">
-                                    <p class="text-muted fs-15">Please enter the 4 digit code sent to <span
-                                            class="fw-semibold">example@abc.com</span></p>
-
+                                    <p class="text-muted fs-15">يرجى إدخال الرمز المؤلف من 4 أرقام المرسل إلى
+                                        <span class="fw-semibold">example@abc.com</span>
+                                    </p>
                                     <div class="p-2">
-                                        <form autocomplete="off">
+                                        <form action="auth-pass-change.html">
                                             <div class="row">
                                                 <div class="col-3">
                                                     <div class="mb-3">
-                                                        <label for="digit1-input" class="visually-hidden">Digit
-                                                            1</label>
+                                                        <label for="digit1-input" class="visually-hidden">الرقم
+                                                            الأول</label>
                                                         <input type="text"
                                                             class="form-control form-control-lg bg-light border-light text-center"
                                                             onkeyup="moveToNext(1, event)" maxLength="1"
@@ -97,8 +61,8 @@
 
                                                 <div class="col-3">
                                                     <div class="mb-3">
-                                                        <label for="digit2-input" class="visually-hidden">Digit
-                                                            2</label>
+                                                        <label for="digit2-input" class="visually-hidden">الرقم
+                                                            الثاني</label>
                                                         <input type="text"
                                                             class="form-control form-control-lg bg-light border-light text-center"
                                                             onkeyup="moveToNext(2, event)" maxLength="1"
@@ -108,8 +72,8 @@
 
                                                 <div class="col-3">
                                                     <div class="mb-3">
-                                                        <label for="digit3-input" class="visually-hidden">Digit
-                                                            3</label>
+                                                        <label for="digit3-input" class="visually-hidden">الرقم
+                                                            الثالث</label>
                                                         <input type="text"
                                                             class="form-control form-control-lg bg-light border-light text-center"
                                                             onkeyup="moveToNext(3, event)" maxLength="1"
@@ -119,8 +83,8 @@
 
                                                 <div class="col-3">
                                                     <div class="mb-3">
-                                                        <label for="digit4-input" class="visually-hidden">Digit
-                                                            4</label>
+                                                        <label for="digit4-input" class="visually-hidden">الرقم
+                                                            الرابع</label>
                                                         <input type="text"
                                                             class="form-control form-control-lg bg-light border-light text-center"
                                                             onkeyup="moveToNext(4, event)" maxLength="1"
@@ -131,13 +95,13 @@
                                         </form><!-- end form -->
 
                                         <div class="mt-3">
-                                            <button type="button" class="btn btn-primary w-100">Confirm</button>
+                                            <button type="button" class="btn btn-primary w-100">تأكيد</button>
                                         </div>
                                     </div>
                                     <div class="mt-4 text-center">
-                                        <p class="mb-0">Didn't receive a code ? <a href="auth-pass-reset-basic.html"
-                                                class="fw-semibold text-primary text-decoration-underline">Resend</a>
-                                        </p>
+                                        <p class="mb-0">لم تستلم الرمز؟ <a href="auth-pass-reset.html"
+                                                class="fw-semibold text-primary text-decoration-underline">أعد
+                                                الإرسال</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -145,7 +109,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- footer -->
             <footer class="footer copyRight">
                 <script>document.write(new Date().getFullYear())</script> © عالم الاستقدام . تصميم وتطوير
@@ -156,13 +119,17 @@
             </footer>
         </div>
     </section>
-
     <!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
-
-    <script src="assets/js/pages/two-step-verification.init.js"></script>
+    <!-- isotope-layout -->
+    <script src="assets/libs/isotope-layout/isotope.pkgd.min.js"></script>
+    <!--Swiper slider js-->
+    <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+    <!-- Countdown js -->
+    <script src="assets/js/frontend/menu.init.js"></script>
+    <script src="assets/js/frontend/custom.js"></script>
 
 </body>
 
