--- a/checkout.html
+++ b/checkout.html
@@ -221,7 +221,7 @@
                 <div class="col-lg-12">
                     <div class="alert alert-danger alert-modern alert-dismissible fade show" role="alert">
                         <i class="bi bi-box-arrow-in-right icons"></i>Returning customer?<a
-                            href="auth-signin-basic.html" class="link-danger"><strong> Click here to login</strong>.</a>
+                            href="auth-signin.html" class="link-danger"><strong> Click here to login</strong>.</a>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 </div>
